--- a/readme.html
+++ b/readme.html
@@ -1,3 +1,3 @@
 Company Profile Alfa Technology
 Demo Sample
-![screenshot](https://user-images.githubusercontent.com/52553184/223902779-ddc6d6d2-78d1-4ecb-af7b-bbc90f866711.PNG)
+[logo](https://user-images.githubusercontent.com/52553184/223902779-ddc6d6d2-78d1-4ecb-af7b-bbc90f866711.PNG)
