--- a/readme.html
+++ b/readme.html
@@ -1,3 +1,4 @@
 Company Profile Alfa Technology
 Demo Sample
-[logo](https://user-images.githubusercontent.com/52553184/223902779-ddc6d6d2-78d1-4ecb-af7b-bbc90f866711.PNG)
+![Alt text](https://user-images.githubusercontent.com/52553184/223902779-ddc6d6d2-78d1-4ecb-af7b-bbc90f866711.PNG "Screenshot")
+
